--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,21 +5,22 @@
 	id="WebApp_ID" version="3.1">
 
 	<display-name>university</display-name>
-
+	
+	
 	<!-- Spring MVC Configs -->
 
-	<!-- Step 1: Configure Spring MVC Dispatcher Servlet -->
+	<!-- Configure Spring MVC Dispatcher Servlet -->
 	<servlet>
 		<servlet-name>dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/smd-project-servlet.xml</param-value>
+			<param-value>/WEB-INF/servlet.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
-	<!-- Step 2: Set up URL mapping for Spring MVC Dispatcher Servlet -->
+	<!-- Set up URL mapping for Spring MVC Dispatcher Servlet -->
 	<servlet-mapping>
 		<servlet-name>dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
